<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterActivity">

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="?attr/actionBarSize"
        android:text="@string/text_signup"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_signup_hint"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup" />

    <!-- Body -->
    <RelativeLayout
        android:id="@+id/layout_signup"
        android:layout_width="0dp"
        android:layout_height="558dp"
        android:background="@drawable/env_background_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_username"
            android:padding="2dp"
            app:boxBackgroundColor="#F6F6F6"
            app:boxStrokeColor="@color/darkPrimaryColor"
            app:boxStrokeErrorColor="#E42028">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_fullname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/input_login"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="4dp"
            android:hint="@string/hint_fullname"
            android:padding="2dp"
            app:boxBackgroundColor="#F6F6F6"
            app:boxStrokeColor="@color/darkPrimaryColor"
            app:boxStrokeErrorColor="#E42028">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/input_fullname"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="4dp"
            android:hint="@string/hint_email"
            android:padding="2dp"
            app:boxBackgroundColor="#F6F6F6"
            app:boxStrokeColor="@color/darkPrimaryColor"
            app:boxStrokeErrorColor="#E42028">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/input_email"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="4dp"
            android:hint="@string/hint_password"
            android:padding="2dp"
            app:boxBackgroundColor="#F6F6F6"
            app:boxStrokeColor="@color/darkPrimaryColor"
            app:boxStrokeErrorColor="#E42028">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_cpass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/input_pass"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="4dp"
            android:hint="@string/hint_cpassword"
            android:padding="2dp"
            app:boxBackgroundColor="#F6F6F6"
            app:boxStrokeColor="@color/darkPrimaryColor"
            app:boxStrokeErrorColor="#E42028">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_cpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/input_cpass"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/button_signup" />
    </RelativeLayout>

    <!-- Other Login -->
    <TextView
        android:id="@+id/tv_signup_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/text_not_signin"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="8dp"
        android:background="@color/primaryColor"
        app:layout_constraintBottom_toTopOf="@id/tv_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/text_google_signin"
        android:gravity="center"
        android:textColor="@color/darkPrimaryColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/civ_google_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_google_login"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/env_google_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>